--- a/src/containers/Home/homeStyle.scss
+++ b/src/containers/Home/homeStyle.scss
@@ -1,9 +1,47 @@
+.rightSlider {
+  animation-name: rightSlider;
+  animation-duration: 1.5s;
+}
+
+.leftSlider {
+  animation-name: leftSlider;
+  animation-duration: 1.5s;
+}
+
+@keyframes rightSlider {
+  from {
+    opacity: 0;
+    transform: translateX(-20%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes leftSlider {
+  from {
+    opacity: 0;
+    transform: translateX(20%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
 .wrapper {
   display: flex;
   justify-content: center;
-  background-color: white;
   .container {
+    margin-top: 50px;
+    background-color: transparent;
+    -webkit-box-shadow: 1px 2px 8px -3px rgba(34, 60, 80, 0.6);
+    -moz-box-shadow: 1px 2px 8px -3px rgba(34, 60, 80, 0.6);
+    box-shadow: 1px 2px 8px -3px rgba(34, 60, 80, 0.6);
+    
     .title {
+      background-color: white;
       display: flex;
       padding: 0 12px;
       justify-content: space-between;
@@ -30,17 +68,20 @@
       display: flex;
       gap: 12px;
       padding: 12px;
+      overflow: hidden;
 
       .card {
         display: flex;
         width: 530px;
         height: 233px;
         box-shadow: 0px 5px 20px -7px rgba(34, 60, 80, 0.2);
+        border-radius: 5px;
 
         img {
           width: 233px;
-          height: 233px;
+          height: auto;
           object-fit: cover;
+          border-radius: 5px 0 0 5px;
         }
 
         .cardContainer {
