--- a/src/containers/Home/homeStyle.scss
+++ b/src/containers/Home/homeStyle.scss
@@ -35,7 +35,7 @@
   justify-content: center;
   .container {
     margin-top: 50px;
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.3);
     -webkit-box-shadow: 1px 2px 8px -3px rgba(34, 60, 80, 0.6);
     -moz-box-shadow: 1px 2px 8px -3px rgba(34, 60, 80, 0.6);
     box-shadow: 1px 2px 8px -3px rgba(34, 60, 80, 0.6);
@@ -67,7 +67,7 @@
     .body {
       display: flex;
       gap: 12px;
-      padding: 12px;
+      padding: 16px 12px;
       overflow: hidden;
 
       .card {
@@ -78,8 +78,6 @@
         border-radius: 5px;
 
         img {
-          width: 233px;
-          height: auto;
           object-fit: cover;
           border-radius: 5px 0 0 5px;
         }
@@ -91,6 +89,7 @@
           padding: 10px;
 
           .description {
+            text-align: justify;
             overflow: hidden;
             text-overflow: ellipsis;
             display: -webkit-box;
@@ -118,6 +117,21 @@
 
           .bottom {
             display: flex;
+            align-items: center;
+          }
+
+
+          .like {
+            font-size: 14px;
+            display: flex;
+            align-items: center;
+            gap: 4px;
+
+            &:hover {
+              svg {
+                color: orange;
+              }
+            }
           }
 
           .chat {
@@ -125,22 +139,12 @@
             margin-left: 20px;
             display: flex;
             align-items: center;
+            gap: 2px;
+
+
 
             &:hover {
               color: black;
-              svg {
-                color: orange;
-              }
-            }
-          }
-
-          .like {
-            font-size: 14px;
-            display: flex;
-            align-items: flex-end;
-            gap: 4px;
-
-            &:hover {
               svg {
                 color: orange;
               }
