--- a/src/containers/Home/homeStyle.scss
+++ b/src/containers/Home/homeStyle.scss
@@ -39,7 +39,7 @@
     -webkit-box-shadow: 1px 2px 8px -3px rgba(34, 60, 80, 0.6);
     -moz-box-shadow: 1px 2px 8px -3px rgba(34, 60, 80, 0.6);
     box-shadow: 1px 2px 8px -3px rgba(34, 60, 80, 0.6);
-    
+
     .title {
       background-color: white;
       display: flex;
@@ -65,14 +65,19 @@
     }
 
     .body {
-      display: flex;
+      display: grid;
+      grid-template-columns: auto auto;
       gap: 12px;
       padding: 16px 12px;
       overflow: hidden;
 
+      @media (max-width: 1200px) {
+        grid-template-columns: auto;
+      }
+
       .card {
         display: flex;
-        width: 530px;
+        min-width: 530px;
         height: 233px;
         box-shadow: 0px 5px 20px -7px rgba(34, 60, 80, 0.2);
         border-radius: 5px;
@@ -120,7 +125,6 @@
             align-items: center;
           }
 
-
           .like {
             font-size: 14px;
             display: flex;
@@ -140,8 +144,6 @@
             display: flex;
             align-items: center;
             gap: 2px;
-
-
 
             &:hover {
               color: black;
