--- a/src/containers/Home/homeStyle.scss
+++ b/src/containers/Home/homeStyle.scss
@@ -34,7 +34,7 @@
   display: flex;
   justify-content: center;
   .container {
-    margin-top: 50px;
+    margin: 50px 20px 0 20px;
     background-color: rgba(255, 255, 255, 0.3);
     -webkit-box-shadow: 1px 2px 8px -3px rgba(34, 60, 80, 0.6);
     -moz-box-shadow: 1px 2px 8px -3px rgba(34, 60, 80, 0.6);
